# bipedWBC-inRaisim

./: CMakeLists.txt  main.cpp  pos_control.cpp
include/: adaptivefootPlace.h  control.h  data_bus.h  gait_generator.h  leg_controller.h  main.h  model.h  opmath.h  pino_kin_dyn.h  stance_leg_controller.h  stance_leg_controllerqp.h  swing_leg_controller.h  wbc_priority.h
rsc/: biped.urdf  biped1.urdf
src/: adaptivefootPlace.cpp  control.cpp  gait_generator.cpp  leg_controller.cpp  model.cpp  opmath.cpp  pino_kin_dyn.cpp  priority_tasks.cpp  stance_leg_controller copy.cpp  stance_leg_controller.cpp  stance_leg_controllerqp.cpp  swing_leg_controller.cpp  useful_math.cpp  wbc_priority.cpp
